# ICSS30_S73_Projects

./: README.md
1/: seminario.md
2/: event_oriented_cripto.md
2/book-cruises/: .env-example  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
2/book-cruises/src/book_cruises/: __init__.py
2/book-cruises/src/book_cruises/app/: __init__.py  app.py  di.py
2/book-cruises/src/book_cruises/app/templates/: book.html  index.html  payment.html  ticket.html
2/book-cruises/src/book_cruises/book_svc/: __init__.py  book_svc.py  di.py  main.py
2/book-cruises/src/book_cruises/commons/domains/: __init__.py  itinerary.py  itinerary_dto.py
2/book-cruises/src/book_cruises/commons/domains/repositories/: itinerary_repository.py
2/book-cruises/src/book_cruises/commons/messaging/: connection.py  consumer.py  producer.py
2/book-cruises/src/book_cruises/commons/repositories/: itinerary_repository.py
2/book-cruises/src/book_cruises/commons/utils/: __init__.py  config.py  cryptography.py  database.py  logging.py  message_middleare.py  producer.py
2/book-cruises/src/book_cruises/commons/utils/database/: database.py  db_init.py
2/book-cruises/src/book_cruises/commons/utils/infra/: __init__.py  db_init.py  postgres.py  rabbitmq.py
2/book-cruises/src/book_cruises/commons/utils/messaging/: __init__.py  connection.py  consumer.py
2/book-cruises/src/book_cruises/commons/utils/rabbitmq/: producer.py
2/book-cruises/src/book_cruises/marketing_svc/: di.py  marketing_svc.py
2/book-cruises/src/book_cruises/payment_svc/: payment_svc.py
2/book-cruises/src/book_cruises/payment_svc/private_keys/: payment_svc_private_key.pem
2/book-cruises/src/book_cruises/ticket_svc/: ticket_svc.py
3/p2p/: Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  run.sh
3/p2p/src/: peer.py  peer_v2.py  tracker.py
3/p2p/src/peer/: __main__.py  logging.py  peer.py  utils.py
4/book-cruises/: .env-example  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
4/book-cruises/src/book_cruises/app/: app.py  di.py
4/book-cruises/src/book_cruises/app/templates/: payment.html
4/book-cruises/src/book_cruises/book_svc/: book_svc.py
4/book-cruises/src/book_cruises/book_svc/public_keys/: payment_svc_public_key.pem
4/book-cruises/src/book_cruises/commons/database/: database.py  db_init.py
4/book-cruises/src/book_cruises/commons/domains/: __init__.py  itinerary.py  payment.py  reservation.py  ticket.py
4/book-cruises/src/book_cruises/commons/domains/repositories/: __init__.py  itinerary_repository.py  reservation_repository.py
4/book-cruises/src/book_cruises/commons/messaging/: consumer.py  producer.py
4/book-cruises/src/book_cruises/commons/utils/: config.py
4/book-cruises/src/book_cruises/external_payment_svc/: __init__.py  external_payment_svc.py  external_service.py
4/book-cruises/src/book_cruises/itinerary_svc/: __init__.py  di.py  itinerary_svc.py
4/book-cruises/src/book_cruises/marketing_svc/: __init__.py  marketing_svc.py
4/book-cruises/src/book_cruises/payment_svc/: __init__.py  di.py  payment_svc.py
4/book-cruises/src/book_cruises/ticket_svc/: __init__.py  ticket_svc.py
4/node-rest/: .envexample  README.md  app.js  package.json
4/node-rest/public/: index.html  (+1 more)
5/: .gitignore  Dockerfile  README.md  docker-compose.yaml
5/data-replication/: go.mod
(+19 files in other folders)
