[project]
name = "book-cruises"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "luisteod", email = "luislopesteo@hotmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.0",
    "inject>=5.2.1",
    "pika>=1.3.2",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.8.1",
]

[project.scripts]
book-svc = "book_cruises:book_svc"
marketing-svc = "book_cruises:market_svc"
payment-svc = "book_cruises:payment_svc"
ticket-svc = "book_cruises:ticket_svc"
app = "book_cruises:app"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
