[project]
name = "book-cruises"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=44.0.2",
    "flask>=3.1.0",
    "inject>=5.2.1",
    "pika>=1.3.2",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.3",
    "pydantic-settings>=2.8.1",
    "requests>=2.32.3",
]

[project.scripts]
book-svc = "book_cruises.book_svc:main"
marketing-svc = "book_cruises.marketing_svc:main"
payment-svc = "book_cruises.payment_svc:main"
ticket-svc = "book_cruises.ticket_svc:main"
app = "book_cruises.app:main"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/book_cruises"]
